# CppUtils

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: compile_and_test.yml
aux/: CppUtilsConfig.h.in  ParameterFile.txt
auxiliary/: ParameterFile.txt
scripts/: plot_quadtree_benchmark.py  plot_rtree.py
src/benchmark/: CMakeLists.txt  benchmarks.cpp  benchmarks.h  benchmarks_Container.cpp  benchmarks_OcTreeND.cpp  benchmarks_QuadTree.cpp  benchmarks_RTreeND.cpp  main.cpp
src/cpputils/: BBoxND.h  BTree.h  CMakeLists.txt  Container.h  Geometry.h  Helpers.h  Log.h  MathUtility.h  Matrix.h  OcTreeND.h  ParaReader.h  QuadTree.h  RTree.h  RTreeND.h  StringOps.h  Timer.h  Vec2.h  VecND.h  VtkIO.h
src/test/: CMakeLists.txt  main.cpp  tests.cpp  tests.h  tests_BBoxND.cpp  tests_BTree.cpp  tests_Container.cpp  tests_Geometry.cpp  tests_Log.cpp  tests_MathUtility.cpp  tests_Matrix.cpp  tests_OcTreeND.cpp  tests_ParaReader.cpp  tests_QuadTree.cpp  tests_RTree.cpp  tests_RTreeND.cpp  tests_StringOps.cpp  tests_Vec2.cpp  tests_VecND.cpp  tests_VtkIO.cpp
